syntax = "proto3";

package post;

import "google/protobuf/empty.proto";

service PostService {
    rpc GetAllPosts (google.protobuf.Empty) returns (stream Post);
    rpc GetPostById (PostById) returns (Post);
    rpc GetMultiplePosts (stream PostById) returns (stream Post);
    rpc CreatePost (Post) returns (PostById);
    rpc CreateMultiplePosts (stream Post) returns (MultiCreateResult);
    rpc UpdatePost (Post) returns (google.protobuf.Empty);
    rpc DeletePost (PostById) returns (google.protobuf.Empty);
}

message Post {
    int32 id = 1;
    string title = 2;
    string content = 3;
}

message PostById {
    int32 id = 1;
}

message MultiCreateResult {
    repeated Post posts = 1;
}